# packages/api/openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   title: Stacks Mesh API
   description: A Mesh API (formerly Rosetta API) implementation for the Stacks blockchain
-  version: 0.7.8
+  version: 0.7.9
 components:
   schemas: {}
 paths:
@@ -708,6 +708,13 @@ paths:
                                           - type: string
                                             enum:
                                               - nft
+                metadata:
+                  type: object
+                  properties:
+                    memo:
+                      anyOf:
+                        - type: string
+                        - type: "null"
                 max_fee:
                   type: array
                   items:
@@ -1287,6 +1294,10 @@ paths:
                           type: number
                         balance:
                           type: string
+                    memo:
+                      anyOf:
+                        - type: string
+                        - type: "null"
                 public_keys:
                   minItems: 1
                   type: array
